--- a/src/css/index.css
+++ b/src/css/index.css
@@ -37,13 +37,14 @@ body a {
   padding: 20px;
   margin-left: 100px;
   margin-right: 100px;
+  animation: fadein 0.3s
 }
 
 .ballpark-container {
   margin-top: 20px;
   display: grid;
   grid-template-columns: repeat(3, 33%);
-  grid-template-rows: repeat(3, 30%);
+  grid-template-rows: repeat(3, 33%);
 }
 
 .ballpark {
@@ -51,7 +52,7 @@ body a {
   font-family: "Black Han Sans", sans-serif;
   font-size: 30px;
   margin: 10px 10px 10px 10px;
-  padding: 10%;
+  padding: 15%;
   text-decoration: none;
   text-align: left top;
   align-items: center;
@@ -78,4 +79,15 @@ body a {
   display: flex;
   flex-direction: column;
   padding: 30px;
+  animation: fadein 0.3s
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
